src/app/components/chat-box/chat-box.component.scss
.in-game-chat {
  position: fixed;
  bottom: 0;
  right: 0;
  width: 342px;
  max-width: 100%;
  background: transparent;

  ion-badge {
    position: absolute;
    top: -10px;
    left: -12px;
    z-index: 2;
    cursor: pointer;
  }

  .chat-messages-container {
    background: var(--background);
    max-height: 40px;
    overflow-y: scroll;
    cursor: pointer;
    transition: all .2s ease-in-out;
    opacity: .5;

    &.shown {
      max-height: 240px;
      opacity: .85;
    }

    .chat-message {
      margin: 0 8px;
      display: flex;
      align-items: center;
      font-size: 14px;
      word-wrap: break-word;

      &.me {
        flex-direction: row-reverse;
        text-align: right;
      }
    }

    .server-chat-message {
      font-weight: bold;
      margin: 8px;
    }
  }
  .chatroom-input {
    width: 100%;
    border: 1px solid lightgray;
    transition: .2s all ease-in-out;
    padding: 8px;
    color: #000;
    font-size: 14px;
    cursor: pointer;

    &.shown {
      cursor: initial;
    }
  }
}

@media (max-width: 1040px) {
  .in-game-chat {
    bottom: 48px;
    width: 100%;

    ion-badge {
      display: none;
    }

    .chat-messages-container {
      max-height: calc(100vh - 210px) !important;
      opacity: 1;
    }
  }
}

